Finished C++ notes (a little rushed from here on out)

--- a/modules/c.tex
+++ b/modules/c.tex
@@ -158,17 +158,25 @@ The left hand side calls the function with the right hand side as the argument. 
 		{c/inheritance}}
 	\caption{\label{fig:inheritance} Syntax for Single Inheritance}
 \end{figure}
-\paragraph{Visibility} Access mode, as seen in \figurename{inheritance}, can either be private or public, with the default being private. If it is public, then the public members of the base class are inherited as public members, otherwise the inherited members become private. When doing multiple inheritance, the syntax is the same as for one base class, but we separate the multiple base classes with commas. Note: private members of base classes are not inherited! \newline
+\paragraph{Visibility} Access mode, as seen in \figurename{fig:inheritance}, can either be private or public, with the default being private. If it is public, then the public members of the base class are inherited as public members, otherwise the inherited members become private. When doing multiple inheritance, the syntax is the same as for one base class, but we separate the multiple base classes with commas. Note: private members of base classes are not inherited! \newline
 Now what if we wanted to inherit something, but we didn't want it to be public in the base class? There is a third visibility identifier we call "protected." Protected members are public for its children, but are private for all other areas. Access mode can also be protected in inheritance declaration. 
-\paragraph{Virtual} Sometimes, we can accidentally inherit functions with the same signatures from different classes. What we can do is declare functions as virtual. Virtual functions are ones that are expected to be overridden in their child classes (similar to abstract in Java, but they still function as normal in the parent class) You can also declare parent classes to be virtual, this helps to stop multiple copies of the same grandparent to be created.
+\paragraph{Virtual} Sometimes, we can accidentally inherit functions with the same signatures from different classes. What we can do is declare functions as virtual. Virtual functions are ones that are expected to be overridden in their child classes (similar to abstract in Java, but they still function as normal in the parent class) You can also declare parent classes to be virtual, this helps to stop multiple copies of the same grandparent to be created. \newline
+Declaring a function as virtual also allows for polymorphism, similar to Java. If we have a reference for the base class, by default, C++ is not polymorphic and wont connect it with a child class that inherits it. However, virtual functions allow for polymorphism. This is because polymorphic functions need the use of a hidden "vtable" which uses extra space in memory, and C++ is all about that \#Efficiency, so the power of polymorphism is in the hands of the programmer. 
 
 \subsection{Memory Management}
 \paragraph{C vs C++}
 C provides \textbf{malloc(), calloc(), realloc()} for dynamic memory allocation, and \textbf{free()} for dynamic memory deallocation. C++ provides \textbf{new} for ynamic memory allocation, and \textbf{delete} for dynamic memory deallocation. C++ provides some additional bonuses too, it provides the manual memory management as we have seen so far, but it can also provide the convenience of garbage collection when desired. We get garbage collection C++ using smart pointers.
-\paragraph{Smart Pointers} 
-\paragraph{Rule of Five}
+\paragraph{Smart Pointers} Smart pointers are pointers whose heap memory is managed by the stack/garbage collector. They are custom classes found in the <memory> header file. There are two types of smart pointers we covered.
+\begin{enumerate}
+	\item Unique Pointer: Stylized as \textbf{unique\_ptr}, the raw pointer it connects to cannot be copied to another unique pointer, and it cannot be passed to a function by value. It can only be moved if ownership of the memory resource is transferred to another unique pointer or after the original unique pointer no longer owns it.
+	\item Shared Pointer: Stylized as \textbf{shared\_ptr}, the raw pointer it connects to can be copied to another shared pointer, and it can be passed to a function by value. All instances point to the same object and share access to one "control block" for reference counting.
+\end{enumerate}
+When declaring the smart pointer without initializing, it needs to initialized with a "\textbf{nullptr}", this is due to how it is set up.
 
+\section{Generic Programming}
+\subsection{Pointers}
+\paragraph{Void Pointers} Since C doesn't have classes, we will use what was the next best thing: void pointers. Void pointers are pointers declared with type "void", which is no type at all. Therefore, we can't operate on void pointers or dereference them without typecasting them. Not typecasting them would not scale operations properly or return some garbage values.
+\paragraph{Function Pointers} Since functions have an address in memory they start in, we can have function pointers that point to that address! The syntax to declare function pointers is as such: \textbf{return\_type ($^*$name) (parameterType1, parameterType2, ...)} for example, a function that returns an int and takes one int as a parameter would have its pointer declared as \textbf{int ($^*$foo) (int)}. To call the function from a pointer, we just dereference the pointer and throw in our parameters in parenthesis after the dereferencing.
 \subsection{Templates}
-templates
-exception handling
-\subsection{Optimization}
+\paragraph{Function Template} A template in C++ is a generic object. A function template can have parameters that are an undefined type, defined later by the programmer in some areas or by the compiler. This is preferred over void pointers and function pointers because it has less source code, is more flexible and easier to implement. If we were to represent the template type as \textbf{T}, before our function deceleration we need to add \textbf{template<typename T>}, representing that the typename "T" is a template type. Ofcourse, this works for functions, but if we wanted to have a generic class, say like a data structure that can be of any type?
+\paragraph{Class Template} We can declare members of a class to have the generic type "T" if we add before the class deceleration \textbf{template <typename T>}. If we wanted to return generic objects, such as a pointer of type T, \textbf{$^*$T}, then we need to add \textbf{typename} before the return declaration of a function. We do this to make sure the compiler knows what it is we want, and that is a generic return.
